# embeddings-at-scale-book

./: .gitignore  .pre-commit-config.yaml  AUTHORING_GUIDE.md  CODE_EXTRACTION_SUMMARY.md  CONTRIBUTING.md  LICENSE  LINTING.md  Makefile  README.md  _quarto.yml  claude.md  convert_to_includes.py  create_documentation.py  extract_code.py  fix_undefined_names.md  footer.html  go.html  head.html  index.qmd  overview_and_contents.md  pyproject.toml  references.bib  requirements.txt  robots.txt  styles.css  theme-dark.scss  theme-light.scss  update_ch01_includes.py
.claude/: SessionStart
appendices/: appendix_a_technical_reference.qmd  appendix_b_code_examples.qmd  appendix_c_resources.qmd
chapter_reviews/: CH01_REVISION_COMPLETE.md  CH02_REVISION_COMPLETE.md  CH03_REVISION_COMPLETE.md  CH04_REVISION_COMPLETE.md  CH05_REVISION_COMPLETE.md  CH06_REVISION_COMPLETE.md  CHAPTERS_07-30_SUMMARY.md  CITATION_FORMAT_VERIFICATION.md  CITATION_REVIEW.md  CITATION_STRATEGY.md  CODE_IMPROVEMENTS_COMPLETE.md  COMPLETE_BOOK_REVIEW_SUMMARY.md  F821_FIXES_COMPLETE.md  LINTING_SETUP_COMPLETE.md  MASTER_PRODUCTION_REVIEW.md  PREFACE_CODE_SAMPLES_ANALYSIS.md  REVIEW_SUMMARY.md  STYLE_CONSISTENCY_REVIEW.md  STYLE_FIXES_COMPLETE.md  TERMINOLOGY_VERIFICATION.md  ch01_fact_checking_analysis.md  ch01_review.md  ch02_fact_checking_analysis.md  ch02_review.md  ch03_fact_checking_analysis.md  ch03_review.md  ch04_fact_checking_analysis.md  ch05_fact_checking_analysis.md  ch06_fact_checking_analysis.md
chapters/: ch01_embedding_revolution.qmd  ch02_embedding_types_modalities.qmd  ch02_foundational_embedding_types.qmd  ch02_similarity_distance_metrics.qmd  ch02_strategic_architecture.qmd  ch03_advanced_embedding_patterns.qmd  ch03_strategic_architecture.qmd  ch03_vector_database_fundamentals.qmd  ch04_custom_embedding_strategies.qmd  ch04_embedding_model_fundamentals.qmd  ch04_strategic_architecture.qmd  ch04_text_embeddings.qmd  ch04_vector_database_fundamentals.qmd  ch05_contrastive_learning.qmd  ch05_image_video_embeddings.qmd  ch05_similarity_distance_metrics.qmd  ch05_vector_database_fundamentals.qmd  ch06_custom_embedding_strategies.qmd  ch06_multimodal_embeddings.qmd  ch06_siamese_networks.qmd  ch06_vector_database_fundamentals.qmd  ch07_contrastive_learning.qmd  ch07_custom_embedding_strategies.qmd  ch07_embedding_model_fundamentals.qmd  ch07_graph_embeddings.qmd  ch07_self_supervised_learning.qmd  ch08_advanced_embedding_techniques.qmd  ch08_contrastive_learning.qmd  ch08_custom_embedding_strategies.qmd  ch08_siamese_networks.qmd  ch08_timeseries_embeddings.qmd  ch09_advanced_embedding_techniques.qmd  ch09_code_embeddings.qmd  (+174 more)
(+756 files in other folders)
