[project]
name = "embeddings-at-scale"
version = "1.0.0"
description = "Code examples from Embeddings at Scale book"
authors = [{name = "Chris Snow"}]
requires-python = ">=3.8"
license = {text = "CC-BY-NC-4.0"}

[tool.ruff]
# Exclude common directories
exclude = [
    ".git",
    ".github",
    ".venv",
    "__pycache__",
    "_book",
    "build",
    "dist",
]

# Line length to match common Python style
line-length = 100

# Target Python 3.8+
target-version = "py38"

[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]

# Ignore specific rules that are too strict for educational code
ignore = [
    "E501",   # Line too long (handled by formatter)
    "E402",   # Module level import not at top of file (educational code with docs)
    "B008",   # Function call in argument defaults
    "B905",   # zip() without explicit strict parameter
    "N803",   # Argument name should be lowercase (conflicts with common ML conventions)
    "N806",   # Variable in function should be lowercase (conflicts with ML conventions)
    "N812",   # Lowercase imported as non-lowercase (standard PyTorch: import torch.nn.functional as F)
    "N817",   # CamelCase imported as acronym (standard ML: DDP for DistributedDataParallel)
    "SIM102", # Use single if instead of nested (nested can be clearer in educational code)
    "SIM108", # Use ternary operator (can reduce readability)
]

# Allow fix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Test files can have additional flexibility
"**/test_*.py" = ["S101"]  # Allow assert statements in tests

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Respect magic trailing comma
skip-magic-trailing-comma = false

# Auto-detect line endings
line-ending = "auto"

[tool.ruff.lint.isort]
# Group imports by type
known-first-party = []
known-third-party = [
    "torch",
    "transformers",
    "sentence_transformers",
    "faiss",
    "numpy",
    "pandas",
    "sklearn",
]

[tool.ruff.lint.mccabe]
# Maximum complexity for a function
max-complexity = 15
